--- a/Basics.ipynb
+++ b/Basics.ipynb
@@ -8,27 +8,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "True\n",
-      "True\n",
-      "3\n",
-      "1\n"
-     ]
-    }
-   ],
    "source": [
-    "print(False == 0)\n",
-    "print (True == 1)\n",
-    "  \n",
-    "print(True + True + True)\n",
-    "print(True + False + False)"
+    "# https://www.geeksforgeeks.org/python-programming-language/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Keywords in Python | Set 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Keywords in Python | Set 1\n",
+    "Python Keywords – IntroductionKeywords in Python | Set 1\n",
+    "Python Keywords – Introduction\n",
+    "\n",
+    "This article aims at providing a detailed insight to these keywords."
    ]
   },
   {
