updates on Basics file

--- a/Basics.ipynb
+++ b/Basics.ipynb
@@ -227,6 +227,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['rajesh', 'peter', 'john']\n",
+      "after deletion\n",
+      "['rajesh', 'peter']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Another Example\n",
+    "a=[\"rajesh\", \"peter\", \"john\"]\n",
+    "print(a)\n",
+    "\n",
+    "del a[-1]\n",
+    "\n",
+    "print(\"after deletion\")\n",
+    "print(a)\n",
+    "\n",
+    "b=[1,2,3]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
