--- a/Basics.ipynb
+++ b/Basics.ipynb
@@ -254,6 +254,63 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Keywords in Python | Set 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Python Keywords – Introduction\n",
+    "Keywords in Python | Set 1\n",
+    "\n",
+    "More keywords:\n",
+    "\n",
+    "16. try : This keyword is used for exception handling, used to catch the errors in the code using the keyword except. Code in “try” block is checked, if there is any type of error, except block is executed.\n",
+    "\n",
+    "17. except : As explained above, this works together with “try” to catch exceptions.\n",
+    "\n",
+    "18. raise : Also used for exception handling to explicitly raise exceptions.\n",
+    "\n",
+    "19. finally : No matter what is result of the “try” block, block termed “finally” is always executed. Detailed article –Exception Handling in Python\n",
+    "\n",
+    "\n",
+    "\n",
+    "20. for : This keyword is used to control flow and for looping.\n",
+    "\n",
+    "21. while : Has a similar working like “for” , used to control flow and for looping.\n",
+    "\n",
+    "22. pass : It is the null statement in python. Nothing happens when this is encountered. This is used to prevent indentation errors and used as a placeholder\n",
+    "\n",
+    "Detailed Article – for, while, pass\n",
+    "\n",
+    "23. import : This statement is used to include a particular module into current program.\n",
+    "\n",
+    "24. from : Generally used with import, from is used to import particular functionality from the module imported.\n",
+    "\n",
+    "25. as : This keyword is used to create the alias for the module imported. i.e giving a new name to the imported module.. E.g import math as mymath.\n",
+    "\n",
+    "Detailed Article – import, from and as\n",
+    "\n",
+    "26. lambda : This keyword is used to make inline returning functions with no statements allowed internally. Detailed Article – map, filter, lambda\n",
+    "\n",
+    "27. return : This keyword is used to return from the function. Detailed article –  Return values in Python.\n",
+    "\n",
+    "\n",
+    "\n",
+    "28. yield : This keyword is used like return statement but is used to return a generator. Detailed Article – yield keyword\n",
+    "\n",
+    "29. with : This keyword is used to wrap the execution of block of code within methods defined by context manager.This keyword is not used much in day to day programming.\n",
+    "\n",
+    "30. in : This keyword is used to check if a container contains a value. This keyword is also used to loop through the container.\n",
+    "\n",
+    "31. is : This keyword is used to test object identity, i.e to check if both the objects take same memory location or not."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
