adding a changess from the updates branch

--- a/Basics.ipynb
+++ b/Basics.ipynb
@@ -312,6 +312,73 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s is part of geeksforgeeks\n",
+      "g e e k s f o r g e e k s \n",
+      "True\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Python code to demonstrate working of \n",
+    "# in and is \n",
+    "  \n",
+    "# using \"in\" to check  \n",
+    "if 's' in 'geeksforgeeks': \n",
+    "       print (\"s is part of geeksforgeeks\") \n",
+    "else : print (\"s is not part of geeksforgeeks\") \n",
+    "  \n",
+    "# using \"in\" to loop through \n",
+    "for i in 'geeksforgeeks': \n",
+    "    print (i,end=\" \") \n",
+    "  \n",
+    "print (\"\\r\") \n",
+    "      \n",
+    "# using is to check object identity \n",
+    "# string is immutable( cannot be changed once alloted) \n",
+    "# hence occupy same memory location \n",
+    "print (' ' is ' ') \n",
+    "  \n",
+    "# using is to check object identity \n",
+    "# dictionary is mutable( can be changed once alloted) \n",
+    "# hence occupy different memory location \n",
+    "print ({} is {}) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s is part of rajeshkumarkarra\n",
+      "r a j e s h k u m a r k a r r a "
+     ]
+    }
+   ],
+   "source": [
+    "# Example:\n",
+    "if 's' in \"rajeshkumarkarra\":\n",
+    "    print(\"s is part of rajeshkumarkarra\")\n",
+    "else:\n",
+    "    print(\"s is not part of rajeshkumarkarra\")\n",
+    "    \n",
+    "for i in 'rajeshkumarkarra':\n",
+    "    print(i, end=\" \")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
