--- a/Basics.ipynb
+++ b/Basics.ipynb
@@ -378,6 +378,156 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "32. global : This keyword is used to define a variable inside the function to be of a global scope.\n",
+    "\n",
+    "33. non-local : This keyword works similar to the global, but rather than global, this keyword declares a variable to point to variable of outside enclosing function, in case of nested functions."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "5\n",
+      "5\n",
+      "Value of a using nonlocal is : 10\n",
+      "Value of a without using nonlocal is : 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Python code to demonstrate working of \n",
+    "# global and non local \n",
+    "\n",
+    "#initializing variable globally \n",
+    "a = 10\n",
+    "\n",
+    "# used to read the variable \n",
+    "def read(): \n",
+    "\tprint (a) \n",
+    "\n",
+    "# changing the value of globally defined variable \n",
+    "def mod1(): \n",
+    "\tglobal a \n",
+    "\ta = 5\n",
+    "\n",
+    "# changing value of only local variable \n",
+    "def mod2(): \n",
+    "\ta = 15\n",
+    "\n",
+    "# reading initial value of a \n",
+    "# prints 10 \n",
+    "read() \n",
+    "\n",
+    "# calling mod 1 function to modify value \n",
+    "# modifies value of global a to 5 \n",
+    "mod1() \n",
+    "\n",
+    "# reading modified value \n",
+    "# prints 5 \n",
+    "read() \n",
+    "\n",
+    "# calling mod 2 function to modify value \n",
+    "# modifies value of local a to 15, doesn't effect global value \n",
+    "mod2() \n",
+    "\n",
+    "# reading modified value \n",
+    "# again prints 5 \n",
+    "read() \n",
+    "\n",
+    "# demonstrating non local \n",
+    "# inner loop changing the value of outer a \n",
+    "# prints 10 \n",
+    "print (\"Value of a using nonlocal is : \",end=\"\") \n",
+    "def outer(): \n",
+    "\ta = 5\n",
+    "\tdef inner(): \n",
+    "\t\tnonlocal a \n",
+    "\t\ta = 10\n",
+    "\tinner() \n",
+    "\tprint (a) \n",
+    "\n",
+    "outer() \n",
+    "\n",
+    "# demonstrating without non local \n",
+    "# inner loop not changing the value of outer a \n",
+    "# prints 5 \n",
+    "print (\"Value of a without using nonlocal is : \",end=\"\") \n",
+    "def outer(): \n",
+    "\ta = 5\n",
+    "\tdef inner(): \n",
+    "\t\ta = 10\n",
+    "\tinner() \n",
+    "\tprint (a) \n",
+    "\n",
+    "outer() \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "10\n",
+      "10\n",
+      "value of a using nonlocal is :10\n",
+      "value of a using without nonlocal is:30\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example\n",
+    "a= 20\n",
+    "\n",
+    "def read():\n",
+    "    print(a)\n",
+    "    \n",
+    "def mod1():\n",
+    "    global a\n",
+    "    a=10\n",
+    "    \n",
+    "def mod2():\n",
+    "    a=30\n",
+    "    \n",
+    "read()\n",
+    "mod1()\n",
+    "read()\n",
+    "mod2()\n",
+    "read()\n",
+    "print(\"value of a using nonlocal is :\", end=\"\")\n",
+    "def outer():\n",
+    "    a=20\n",
+    "    def inner():\n",
+    "        nonlocal a\n",
+    "        a=10\n",
+    "    inner()\n",
+    "    print(a)\n",
+    "outer()\n",
+    "print(\"value of a using without nonlocal is:\", end=\"\")\n",
+    "def outer():\n",
+    "    a=30\n",
+    "    def inner():\n",
+    "        a=25\n",
+    "    \n",
+    "    inner()\n",
+    "    print(a)\n",
+    "outer()\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
