updates from basics file as on 21/01/2019-08:23pm

--- a/Basics.ipynb
+++ b/Basics.ipynb
@@ -993,6 +993,100 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Structuring Python Programs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this article, you would come to know about proper structuring and formatting your python programs.\n",
+    "\n",
+    "Python Statements In general, the interpreter reads and executes the statements line by line i.e sequentially. Though, there are some statements that can alter this behavior like conditional statements.\n",
+    "            Mostly, python statements are written in such a format that one statement is only written in a single line. The interpreter considers the ‘new line character’ as the terminator of one instruction. But, writing multiple statements per line is also possible that you can find below.\n",
+    "Examples:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to the tech world\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 1 \n",
+    "\n",
+    "print('Welcome to the tech world') \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "' In the above mentioned format, the first \\nindex is included, but the last index is not \\nincluded.'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Example 1\n",
+    "# Example 2 \n",
+    "\n",
+    "x = [1, 2, 3, 4] \n",
+    "\n",
+    "# x[1:3] means that start from the index \n",
+    "# 1 and go upto the index 2 \n",
+    "print(x[1:3]) \n",
+    "\n",
+    "\"\"\" In the above mentioned format, the first \n",
+    "index is included, but the last index is not \n",
+    "included.\"\"\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 2\n",
+    "y = [1,2,2,3,4,5,6,5]\n",
+    "print(y[2:5])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
