additional updates on basics file as on 25/01/2019 14:51

--- a/Basics.ipynb
+++ b/Basics.ipynb
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -322,8 +322,20 @@
       "s is part of geeksforgeeks\n",
       "g e e k s f o r g e e k s \n",
       "True\n",
-      "False\n"
+      "False\n",
+      "False\n",
+      "True\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -349,7 +361,14 @@
     "# using is to check object identity \n",
     "# dictionary is mutable( can be changed once alloted) \n",
     "# hence occupy different memory location \n",
-    "print ({} is {}) "
+    "print ({} is {}) \n",
+    "print([] is [])\n",
+    "print(() is ())\n",
+    "type(())\n",
+    "type([])\n",
+    "type({})\n",
+    "type(\"\")\n",
+    "type(2.5)"
    ]
   },
   {
@@ -388,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -469,6 +488,67 @@
     "\tprint (a) \n",
     "\n",
     "outer() \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Printing global a value: 20\n",
+      "printing changing global value of a: Printing global a value: 100\n",
+      "printing local a value instead of non changing of global value: Printing global a value: 100\n",
+      "value of 'a' using nonlocal:  20\n",
+      "value of 'a' using local: 10\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 1\n",
+    "a = 20\n",
+    "def read():\n",
+    "    print(\"Printing global a value: \", end=\"\")\n",
+    "    print(a)\n",
+    "read()\n",
+    "\n",
+    "def mod1():\n",
+    "    global a\n",
+    "    a=100\n",
+    "    print(\"printing changing global value of a: \", end=\"\")\n",
+    "    \n",
+    "mod1()\n",
+    "read()\n",
+    "\n",
+    "def mod2():\n",
+    "    a=200\n",
+    "    print(\"printing local a value instead of non changing of global value: \", end=\"\")\n",
+    "    \n",
+    "mod2()\n",
+    "read()\n",
+    "\n",
+    "print(\"value of 'a' using nonlocal:  \", end=\"\")\n",
+    "def outer():\n",
+    "    a=10\n",
+    "    def inner():\n",
+    "        nonlocal a\n",
+    "        a=20\n",
+    "    inner()\n",
+    "    print(a)\n",
+    "outer()\n",
+    "\n",
+    "print(\"value of 'a' using local: \", end=\"\")\n",
+    "def outer():\n",
+    "    a=10\n",
+    "    def inner():\n",
+    "        a=20\n",
+    "    inner()\n",
+    "    print(a)\n",
+    "outer()\n",
+    "\n"
    ]
   },
   {
@@ -612,6 +692,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 1\n",
+    "count = 5\n",
+    "def someMethod():\n",
+    "    global count\n",
+    "if(count<=5):\n",
+    "    count=count+1\n",
+    "    print(count)\n",
+    "        \n",
+    "someMethod()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -664,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -673,18 +778,6 @@
      "text": [
       "Inside some_func\n",
       "Inside inner function, value of var: 10\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'var' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m----------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-fac826392922>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0msome_inner_func\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Try printing var from outer function: \"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mvar\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0msome_func\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-4-fac826392922>\u001b[0m in \u001b[0;36msome_func\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Inside inner function, value of var:\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mvar\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0msome_inner_func\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Try printing var from outer function: \"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mvar\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0msome_func\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'var' is not defined"
      ]
     }
    ],
@@ -699,13 +792,13 @@
     "\t\tvar = 10\n",
     "\t\tprint(\"Inside inner function, value of var:\",var) \n",
     "\tsome_inner_func() \n",
-    "\tprint(\"Try printing var from outer function: \",var) \n",
+    "\t\n",
     "some_func() \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -714,18 +807,6 @@
      "text": [
       "inside some_func\n",
       "Inside inner function value of var: 10\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'var' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m----------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-5-7faee5490a8f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"try printing var value from outer fucn: \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvar\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m \u001b[0msome_func\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     14\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-5-7faee5490a8f>\u001b[0m in \u001b[0;36msome_func\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0msome_inner_func\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"try printing var value from outer fucn: \"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvar\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0msome_func\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'var' is not defined"
      ]
     }
    ],
@@ -737,11 +818,7 @@
     "    def some_inner_func():\n",
     "        var=10\n",
     "        print(\"Inside inner function value of var:\", var)\n",
-    "        \n",
     "    some_inner_func()\n",
-    "    \n",
-    "    print(\"try printing var value from outer fucn: \", var)\n",
-    "    \n",
     "some_func()\n",
     "    "
    ]
@@ -876,6 +953,27 @@
     "while(j<=5):\n",
     "    print(j, end=\"\")\n",
     "    j = j+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5678910"
+     ]
+    }
+   ],
+   "source": [
+    "# Example1\n",
+    "count=5\n",
+    "while(count<=10):\n",
+    "    print(count, end=\"\")\n",
+    "    count=count+1"
    ]
   },
   {
