additional updates on basics file-25/01/2019 15:58

--- a/Basics.ipynb
+++ b/Basics.ipynb
@@ -1185,6 +1185,535 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Multiple Statements per Line We can also write multiple statements per line, but it is not a good practice as it reduces the readability of the code. Try to avoid writing multiple statements in a single line. But, still you can write multiple lines by terminating one statement with the help of ‘;’. ‘;’ is used as the terminator of one statement in this case.\n",
+    "        For Example, consider the following code."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "20\n",
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example \n",
+    "\n",
+    "a = 10; b = 20; c = b + a \n",
+    "\n",
+    "print(a); print(b); print(c) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "peter, john\n",
+      "mark\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 1\n",
+    "name = \"peter, john\";surname =\"mark\"\n",
+    "print(name);print(surname)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Line Continuation to avoid left and right scrolling \n",
+    "Some statements may become very long and may force you to scroll the screen left and right frequently. You can fit your code in such a way that you do not have to scroll here and there. Python allows you to write a single statement in multiple lines, also known as line continuation. Line continuation enhances readability as well.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "# Bad Practice as width of this code is\n",
+    "# too much.\n",
+    "\n",
+    "#code\n",
+    "x = 10\n",
+    "y = 20\n",
+    "z = 30\n",
+    "no_of_teachers = x\n",
+    "no_of_male_students = y\n",
+    "no_of_female_students = z\n",
+    "\n",
+    "if (no_of_teachers == 10 && no_of_female_students == 30 && no_of_male_students == 20 && (x + y) == 30):\n",
+    "        print('The course is valid')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Types of Line Continuation \n",
+    "In general, there are two types of line continuation\n",
+    "\n",
+    "Implicit Line Continuation \n",
+    "This is the most straightforward technique in writing a statement that spans multiple lines.\n",
+    "Any statement containing opening parentheses (‘(‘), brackets (‘[‘), or curly braces (‘{‘) is presumed to be incomplete until all matching parentheses, square brackets, and curly braces have been encountered. Until then, the statement can be implicitly continued across lines without raising an error.\n",
+    "Examples:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 2, 3], [3, 4, 5], [5, 6, 7]]\n",
+      "['rajesh', 'peter', 'john']\n",
+      "('rajesh', 'peter', 'john')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 1 \n",
+    "\n",
+    "# The following code is valid \n",
+    "a = [ \n",
+    "\t[1, 2, 3], \n",
+    "\t[3, 4, 5], \n",
+    "\t[5, 6, 7] \n",
+    "\t] \n",
+    "\n",
+    "print(a) \n",
+    "a =[\n",
+    "    \"rajesh\",\n",
+    "    \"peter\",\n",
+    "    \"john\"\n",
+    "   ]\n",
+    "print(a)\n",
+    "\n",
+    "a =(\n",
+    "    \"rajesh\",\n",
+    "    \"peter\",\n",
+    "    \"john\"\n",
+    "   )\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 Persons should have ID Cards\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 2 \n",
+    "# The following code is also valid \n",
+    "\n",
+    "person_1 = 18\n",
+    "person_2 = 20\n",
+    "person_3 = 12\n",
+    "\n",
+    "if ( \n",
+    "person_1 >= 18 and\n",
+    "person_2 >= 18 and\n",
+    "person_3 < 18\n",
+    "): \n",
+    "\tprint('2 Persons should have ID Cards') \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 persons should have ID cards\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 2\n",
+    "person1=18\n",
+    "person2=20\n",
+    "person3=12\n",
+    "\n",
+    "if(\n",
+    "    person1<=18 or\n",
+    "    person2<=20 or\n",
+    "    person3>=12\n",
+    "  ):\n",
+    "    print('1 persons should have ID cards')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "they're eligible for the meeting\n",
+      "rajeshkumarjohnPaul"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 3\n",
+    "\n",
+    "person1 = \"rajeshkumar\"\n",
+    "person2 = \"johnPaul\"\n",
+    "\n",
+    "if('a' in person1 and person2):\n",
+    "    print(\"they're eligible for the meeting\")\n",
+    "    \n",
+    "type(person1)\n",
+    "\n",
+    "for i in person1, person2:\n",
+    "    print(i, end=\"\" )\n",
+    "    \n",
+    "\n",
+    "\n",
+    "   \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Explicit Line Continuation \n",
+    "Explicit Line joining is used mostly when implicit line joining is not applicable. In this method, you have to use a character that helps the interpreter to understand that the particular statement is spanning more than one lines.\n",
+    "        Backslash (\\) is used to indicate that a statement spans more than one line. The point is to be noted that ” must be the last character in that line, even white-space is not allowed.\n",
+    "See the following example for clarification"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 2\n",
+    "y = \\\n",
+    "1+2\\\n",
+    "+3+4\\\n",
+    "+10\n",
+    "\n",
+    "print(y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Explicit Line Continuation \n",
+    "Explicit Line joining is used mostly when implicit line joining is not applicable. In this method, you have to use a character that helps the interpreter to understand that the particular statement is spanning more than one lines.\n",
+    "        Backslash (\\) is used to indicate that a statement spans more than one line. The point is to be noted that ” must be the last character in that line, even white-space is not allowed.\n",
+    "See the following example for clarification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Comments in Python \n",
+    "Writing comments in the code are very important and they help in code readability and also tell more about the code. It helps you to write details against a statement or a chunk of code. Interpreter ignores the comments and does not count them in commands. In this section, we’ll learn how to write comments in Python.\n",
+    "        Symbols used for writing comments include Hash (#) or Triple Double Quotation marks(“””). Hash is used in writing single line comments that do not span multiple lines. Triple Quotation Marks are used to write multiple line comments. Three triple quotation marks to start the comment and again three quotation marks to end the comment.\n",
+    "Consider the following examples:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example 1 \n",
+    "\n",
+    "####### This example will print Hello World ####### print('Hello World') # This is a comment \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How old are you?\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 2 \n",
+    "\n",
+    "\"\"\" This example will demonstrate \n",
+    "\tmultiple comments \"\"\"\n",
+    "\n",
+    "\"\"\" The following \n",
+    "\ta variable contains the \n",
+    "\tstring 'How old are you?' \n",
+    "\"\"\"\n",
+    "a = 'How old are you?'\n",
+    "\n",
+    "\"\"\" The following statement prints \n",
+    "\twhat's inside the variable a \n",
+    "\"\"\"\n",
+    "print(a) \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Note Do note that Hash (#) inside a string does not make it a comment. Consider the following example for demonstration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is # not a comment #\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example \n",
+    "\n",
+    "\"\"\" The following statement prints the string stored \n",
+    "\tin the variable \"\"\"\n",
+    "\n",
+    "a = 'This is # not a comment #'\n",
+    "print(a) # Prints the string stored in a \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 1 \n",
+    "\n",
+    "# This is correct but whitespace can improve readability \n",
+    "\n",
+    "a = 1-2 # Better way is a = 1 - 2 \n",
+    "\n",
+    "print(a) \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "' Readable form could be as follows \\nx = 10 \\nflag = (x == 10) and (x < 12) \\nprint(flag) \\n'"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Example 2 \n",
+    "\n",
+    "# This is correct \n",
+    "# Whitespace here can improve readability. \n",
+    "x = 10\n",
+    "flag =(x == 10)and(x<12) \n",
+    "print(flag) \n",
+    "\n",
+    "\"\"\" Readable form could be as follows \n",
+    "x = 10 \n",
+    "flag = (x == 10) and (x < 12) \n",
+    "print(flag) \n",
+    "\"\"\"\n",
+    "\n",
+    "# Try the more readable code yourself \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Whitespaces are necessary in separating the keywords from the variables or other keywords. Consider the following example."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example \n",
+    "\n",
+    "x = [1, 2, 3] \n",
+    "y = 2\n",
+    "\n",
+    "\"\"\" Following is incorrect, and will generate syntax error \n",
+    "a = yin x \n",
+    "\"\"\"\n",
+    "\n",
+    "# Corrected version is written as \n",
+    "a = y in x \n",
+    "print(a) \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Whitespaces as Indentation \n",
+    "Python’s syntax is quite easy, but still you have to take some care in writing the code. Indentation is used in writing python codes.\n",
+    "        Whitespaces before a statement have significant role and are used in indentation. Whitespace before a statement can have a different meaning. Let’s try an example."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "foo\n",
+      "foo\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example \n",
+    "\n",
+    "print('foo') # Correct \n",
+    "\n",
+    "print('foo') # This will generate an error \n",
+    "\n",
+    "# The error would be somewhat 'unexpected indent' \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Leading whitespaces are used to determine the grouping of the statements like in loops or control structures etc.\n",
+    "Example:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example \n",
+    "\n",
+    "x = 10\n",
+    "\n",
+    "while(x != 0):\n",
+    "    if(x > 5):# Line 1 \n",
+    "        print('x > 5') # Line 2 \n",
+    "    else:\t # Line 3 \n",
+    "        print('x < 5') # Line 4 \n",
+    "    x -= 2\t # Line 5 # it means x= x-2(subtract left operand from right operand)\n",
+    "\n",
+    "\"\"\" \n",
+    "Lines 1, 3, 5 are on same level \n",
+    "Line 2 will only be executed if if condition becomes true. \n",
+    "Line 4 will only be executed if if condition becomes false. \n",
+    "\"\"\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rajesh\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('rajesh')"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
