additional updates on basics file-25/01/2019 18:48

--- a/Numbers.ipynb
+++ b/Numbers.ipynb
@@ -1,8 +1,27 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 1,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rajesh\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('rajesh')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
